@@ -1831,6 +1831,7 @@ timelib_time *timelib_parse_from_format(char *format, char *string, int len, tim
 	timelib_sll tmp;
 	Scanner in;
 	Scanner *s = &in;
+	int allow_extra = 0;
 
 	memset(&in, 0, sizeof(in));
 	in.errors = malloc(sizeof(struct timelib_error_container));
@@ -2056,6 +2057,10 @@ timelib_time *timelib_parse_from_format(char *format, char *string, int len, tim
 				timelib_eat_until_separator((char **) &ptr);
 				break;
 
+			case '+': /* allow extra chars in the format */
+				allow_extra = 1;
+				break;
+
 			default:
 				if (*fptr != *ptr) {
 					add_pbf_error(s, "The format separator does not match", string, begin);
@@ -2065,7 +2070,15 @@ timelib_time *timelib_parse_from_format(char *format, char *string, int len, tim
 		fptr++;
 	}
 	if (*ptr) {
-		add_pbf_error(s, "Trailing data", string, ptr);
+		if (allow_extra) {
+			add_pbf_warning(s, "Trailing data", string, ptr);
+		} else {
+			add_pbf_error(s, "Trailing data", string, ptr);
+		}
+	}
+	/* ignore trailing +'s */
+	while (*fptr == '+') {
+		fptr++;
 	}
 	if (*fptr) {
 		add_pbf_error(s, "Data missing", string, ptr);
