@@ -121,6 +121,10 @@ PHP                                                                        NEWS
   . Added support for CURLOPT_MAX_RECV_SPEED_LARGE and
     CURLOPT_MAX_SEND_SPEED_LARGE. FR #51815. (Pierrick)
 
+- Improved Date extension:
+  . Added the + modifier to parseFromFormat to allow trailing text in the
+    string to parse without throwing an error. (Stas, Derick)
+
 - Improved DBA extension:
   . Added Tokyo Cabinet abstract DB support. (Michael Maclean)
   . Added Berkeley DB 5 support. (Johannes, Chris Jones)
